# cosmicds

./: .coveragerc  .gitignore  .python-version  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yaml  tests.yaml
cosmic_ds/: app.py  app.vue  cli.py
cosmic_ds/stories/: Hubble DS.ipynb
cosmicds/: __init__.py  app.py  app.vue  cds_glue_state.py  cli.py  events.py  histogram_listener.py  line_draw_handler.py  material_colors.py  message.py  mixins.py  phases.py  registries.py  stage.py  story.py  subset_modifier_listener.py  utils.py
cosmicds/components/: ContrastBrightnessControl.vue  __init__.py  contrast_brightness_control.vue  custom_stepper.vue  dialog_carousel.vue  form_dialog.vue  form_textarea.vue  free_response.vue  hinttext_alert.vue  mc_radiogroup.vue  scaffold_alert.vue  snackbar_alert.vue  speech_settings.vue  speech_synthesizer.vue  teamaside_alert.vue  todo_alert.vue  video_dialog.vue
cosmicds/components/dialog/: dialog.py  dialog.vue
cosmicds/components/distance_tool/: distance_tool.py
cosmicds/components/footer/: __init__.py  footer.py  footer.vue
cosmicds/components/galaxy_exploration_tool/: __init__.py  galaxy_exploration_tool.py  galaxy_exploration_tool.vue
cosmicds/components/galaxy_selection_tool/: __init__.py  galaxy_selection_tool.py
cosmicds/components/generic_state_component/: __init__.py  generic_state_component.py
cosmicds/components/intro_slideshow/: __init__.py  intro_slideshow.py  intro_slideshow.vue
cosmicds/components/layer_toggle/: __init__.py  layer_toggle.py  layer_toggle.vue
cosmicds/components/measuring_tool/: __init__.py  measuring_tool.py  measuring_tool.vue
cosmicds/components/percentage_selector/: __init__.py  percentage_selector.py  percentage_selector.vue
cosmicds/components/selection_tool/: selection_tool.py  selection_tool.vue
cosmicds/components/statistics_selector/: __init__.py  statistics_selector.py  statistics_selector.vue
cosmicds/components/table/: table.py  table.vue
cosmicds/components/toolbar/: toolbar.py  toolbar.vue
cosmicds/components/viewer_layout/: viewer_layout.py  viewer_layout.vue
cosmicds/components/widget_layout/: __init__.py  widget_layout.py  widget_layout.vue
cosmicds/data/: BUACGalaxyHistoryUniverse.wtml  Cosmology_models_Riess1998.ipynb  HSTkey2001.csv  Hubble 1929-Table 1.csv  SDSS_all_sample_filtered.csv  SIMBAD_z0.3_N1000.csv  SimbadCatalogProcessing.ipynb  SimbadCatalogProcessing_GJ.ipynb  dummy_student_data.csv  galaxy_data.csv  galaxy_data_old.csv
cosmicds/data/hubble_simulation/: example_class_results.csv  example_student_measurements.csv  simulate.py
cosmicds/data/hubble_simulation/output/: HubbleData_All.csv  HubbleData_ClassSample.csv  HubbleSummary_ClassSample.csv  HubbleSummary_Classes.csv  HubbleSummary_Overall.csv  HubbleSummary_Students.csv
cosmicds/data/spectra/: SDSS_J143450.62+033842.5_S.ecsv
cosmicds/data/styles/: comparison_scatter.json  default_scatter.json  default_scatter_dark.json  default_scatter_light.json  default_spectrum_dark.json  prodata_scatter.json
cosmicds/data/vue_components/: dist_table.vue  form_dialog.vue  guide_specvel_windows.vue  help_dialog.vue  infodialog_alert.vue  intro_slideshow_wwt.vue  mc_radiogroup.vue  mydata_table.vue  obsolete-dist_table.vue  obsolete-velocity_table.vue  reflect_velocity_windows.vue  responsedialog_alert.vue  scaffold_alert.vue  teamaside_alert.vue  todo_alert.vue  velocity_table.vue
cosmicds/spectrum_tool/: 095000+731408.txt  3C348_HerA.txt  A370_3402.txt  NGC6052.txt  SDSS_J143450.62+033842.5 S.txt  SDSS_J143450.txt  spectrum_tool.html  spectrum_tool.js  sun_ref_colina96.txt
cosmicds/stories/: Hubble DS.ipynb  __init__.py
cosmicds/stories/hubbles_law/: CosmicDS.ipynb  __init__.py  data_management.py  histogram_listener.py  line_draw_handler.py  stage.py  state.py  story.py  subset_modifier_listener.py  tools.py  utils.py
cosmicds/stories/hubbles_law/stages/: __init__.py  (+11 more)
cosmicds/tests/: test_basic.ipynb  test_basic.py
cosmicds/tools/: __init__.py  cds_home_tool.py  info_tool.py  line_draw_tool.py  line_fit_tool.py  toggle_layer_tool.py  zoom_tools.py
cosmicds/viewers/: __init__.py  cds_viewers.py  spectrum_view.py
cosmicds/viewers/cds_viewer/: __init__.py  state.py  viewer.py
cosmicds/viewers/dotplot/: layer_artist.py  state.py  viewer.py
cosmicds/vue_components/: contrast_brightness_control.vue  guide_specvel_windows.vue  mc_radiogroup.vue  responsedialog_alert.vue  video_dialog.vue
docs/: conf.py  index.rst
licenses/: LICENSE.rst
notebooks/: CosmicDS.ipynb  Example Dynamic Subsets.ipynb  Example Line Fitting.ipynb  Example Plot Styling.ipynb  Example Table Integration.ipynb  Example.ipynb  Hubble DS.ipynb  fitting_demo.py  fitting_demo.vue
src/cosmicds/: __init__.py  config.py  custom_types.py  layout.py  logger.py  material_colors.py  messages.py  remote.py  skeleton.py  state.py  utils.py
src/cosmicds/components/: InfoDialog.vue  __init__.py  debug_control.py  layer_toggle.py  login.py  percentage_selector.py  scaffold_alert.py  speech_synthesizer.py  statistics_selector.py  viewer_layout.py
src/cosmicds/tools/: __init__.py  line_fit_tool.py
src/cosmicds/viewers/: __init__.py  state.py  viewer.py
src/cosmicds/vue_components/: ContrastBrightnessControl.vue  FreeResponse.vue  McRadiogroup.vue  ScaffoldAlert.vue  SpeechSynthesizer.vue
tests/: conftest.py  test_skeleton.py
(+1868 files in other folders)
