[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmicds"
authors = [{name = "CosmicDS Developers", email = "pudomprasert@cfa.harvard.edu"}]
license = {text = "MIT License"}
description = "Core package for Cosmic Data Stories"
readme = "README.md"
urls = {Homepage = "https://www.cosmicds.cfa.harvard.edu/"}
requires-python = ">=3.11"
dependencies = [
    "echo",
    "glue-core",
    "glue-jupyter",
    "glue-plotly",
    "httpx",
    "ipyvuetify",
    "numpy",
    "reacton",
    "solara",
    "solara-enterprise",
    "traitlets",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "setuptools",
    "pytest",
    "pytest-cov",
]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
