[metadata]
name = cosmic_ds
author = CosmicDS Developers
author_email = nearl@gluesolutions.io
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = 
description = Package to facilitate connections between astronomers who want to tell stories about their data
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
cosmic_ds = data/*

[tool:pytest]
testpaths = "cosmic_ds" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  cosmic_ds/__init*
  cosmic_ds/conftest.py
  cosmic_ds/*setup_package*
  cosmic_ds/tests/*
  cosmic_ds/*/tests/*
  cosmic_ds/extern/*
  cosmic_ds/version*
  */cosmic_ds/__init*
  */cosmic_ds/conftest.py
  */cosmic_ds/*setup_package*
  */cosmic_ds/tests/*
  */cosmic_ds/*/tests/*
  */cosmic_ds/extern/*
  */cosmic_ds/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
