[metadata]
name = cosmicds
author = CosmicDS Developers
author_email = nearl@gluesolutions.io
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = 
description = Package to facilitate connections between astronomers who want to tell stories about their data
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires = 
  numpy
  glue-core
  glue-jupyter >= 0.12
  pywwt @ git+https://github.com/Carifio24/pywwt@prekdr
  astropy
  traitlets
  bqplot
  bqplot-image-gl
  ipyvue
  ipyvuetify
  voila @ git+https://github.com/Carifio24/voila@prekdr
  echo
  click

[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
cosmicds = 
    stories/*
    data/*
    *.vue

[options.entry_points]
console_scripts =
gui_scripts =
    cosmicds = cosmicds.cli:main

[tool:pytest]
testpaths = "cosmicds" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  cosmicds/__init*
  cosmicds/conftest.py
  cosmicds/*setup_package*
  cosmicds/tests/*
  cosmicds/*/tests/*
  cosmicds/extern/*
  cosmicds/version*
  */cosmicds/__init*
  */cosmicds/conftest.py
  */cosmicds/*setup_package*
  */cosmicds/tests/*
  */cosmicds/*/tests/*
  */cosmicds/extern/*
  */cosmicds/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
